--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,32 +1,32 @@
 <resources>
     <string name="app_name">N-ScanHub</string>
-    <string name="TextRestart">重启设备</string>
-    <string name="TextClear">清空显示</string>
+    <string name="TextRestart">REBOOT DEVICE</string>
+    <string name="TextClear">CLEAR</string>
     <string name="TextChkDev">检查设备</string>
-    <string name="TextDecode">识读条码</string>
+    <string name="TextDecode">SCAN</string>
     <string name="TextGetInfo">GET DEICE INFO</string>
-    <string name="TextOpen">打开设备</string>
+    <string name="TextOpen">Open Device</string>
     <string name="TextClose">关闭设备</string>
-    <string name="TextGetCfg">查询配置</string>
-    <string name="TextGetImg">获取图像</string>
-    <string name="TextUpdate">更新固件</string>
-    <string name="TextSerialName">串口设备：</string>
-    <string name="TextSerailBaud">波特率：</string>
+    <string name="TextGetCfg">GET CONFIG</string>
+    <string name="TextGetImg">GET IMAGE</string>
+    <string name="TextUpdate">FW UPDATE</string>
+    <string name="TextSerialName">Serial Name：</string>
+    <string name="TextSerailBaud">Baud：</string>
     <string name="TextSwitchClose">关闭</string>
     <string name="TextSwitchOpen">开启</string>
     <string name="TextConfigErr">配置错误</string>
-    <string name="TextUnityCommand">命令:</string>
+    <string name="TextUnityCommand">Command:</string>
     <string name="common_save_success">保存成功</string>
     <string name="TextGetImgFail">取图失败</string>
     <string name="TextCreateBmpPathFail">创建文件目录失败</string>
     <string name="TextDelBmpFail">删除相同文件失败</string>
-    <string name="TextSenseMode">感应模式</string>
+    <string name="TextSenseMode">SENSE MODE</string>
     <string name="RereadTimeout">延时时间</string>
     <string name="RereadTimeoutSwitch">重读延时</string>
     <string name="RereadTimeoutReset">延时复位</string>
     <string name="DisableRead">禁止识读</string>
     <string name="GoodReadDelay">成功读码延时</string>
-    <string name="EnableRead">使能识读</string>
+    <string name="EnableRead">EnableSCAN</string>
     <string name="ContinueMode">连续识读</string>
     <string name="GoodReadDelaySwitch">成功延时</string>
     <string name="Prefix">前缀</string>
@@ -39,12 +39,12 @@
     <string name="TextInfoPlugin">设备插入</string>
     <string name="TextInfoPlugout">设备拔出</string>
     <string name="TextInfoUpdate">更新固件</string>
-    <string name="TextUpdateConfig">更新配置</string>
+    <string name="TextUpdateConfig">CONFIG UPDATE</string>
     <string name="TextInfoUpdating">更新中...</string>
     <string name="dev_com">/dev/ttyMT1</string>
     <string name="baud">9600</string>
     <string name="output_barcode_encode">请选择输出条码编码</string>
-    <string name="barcode_encode">条码编码</string>
+    <string name="barcode_encode">BARCODE ENCODE</string>
 
     <array name="encode_item">
         <item>默认</item>
